--- a/css/estilo.css
+++ b/css/estilo.css
@@ -22,17 +22,14 @@ html {
 body {
   font-family: var(--fuentePrincipal);
   font-size: 1.6rem;
-  line-height: 1.5;
-  margin: 0;
-  padding: 0;
+  line-height: 2;
 }
 
 /*GLOBALES**/
 
 .contenedor {
-  max-width: 120rem;
+  width: min(90%, 120rem);
   margin: 0 auto;
-  width: 95%;
 }
 
 a {
@@ -42,10 +39,10 @@ a {
 h1,
 h2,
 h3,
-h4,
-h5 {
-  margin: 0;
+h4 {
+  margin: 1;
   font-family: var(--fuenteSecundaria);
+  line-height: 1.2;
 }
 h1 {
   font-size: 3.5rem;
@@ -64,4 +61,78 @@ img {
   max-width: 100%;
 }
 
-/*HEADER**/
+/*utilidades**/
+.no-margin {
+  padding: 0;
+}
+.no-padding {
+  padding: 0;
+}
+
+.centrar-texto {
+  text-align: center;
+}
+
+/**HEADER**/
+.webp .header {
+  background-image: url("../img/logo_principal.jpg");
+}
+
+.no-webp .header {
+  background-image: url("../img/logo_secundaria.jpeg");
+}
+
+.header {
+  height: 60rem;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.header_texto {
+  color: var(--FondoPrincipalAmarillo);
+  text-align: center;
+  padding-top: 5rem;
+}
+
+@media (min-width: 768px) {
+  .header_texto {
+    padding-top: 15rem;
+  }
+}
+
+/***BARRA && Logo**/
+.barra {
+  padding-top: 4rem;
+}
+
+@media (min-width: 768px) {
+  .barra {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+.logo {
+  color: var(--ColorPrincipalCaramelo);
+}
+
+.logo_texto {
+  font-weight: 500;
+}
+
+.logo_span {
+  font-weight: 800;
+}
+@media (min-width: 768px) {
+  .navegacion {
+    display: flex;
+    gap: 2rem;
+  }
+}
+.navegacion_enlace {
+  display: block;
+  text-align: center;
+  font-size: 1.8rem;
+  color: var(--ColorPrincipalCaramelo);
+}
