--- a/css/estilo.css
+++ b/css/estilo.css
@@ -165,11 +165,16 @@ img {
   text-transform: uppercase;
   font-weight: 700;
   margin-bottom: 2rem;
+  border: none;
 }
 @media (min-width: 768px) {
   .boton {
     display: inline-block;
   }
+}
+
+.boton:hover {
+  cursor: pointer;
 }
 
 .boton-primario {
@@ -266,4 +271,29 @@ img {
   height: 48rem;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.formulario {
+  background-color: var(--FondoPrincipalAmarillo);
+  padding: -5rem auto 0 auto;
+  width: 95%;
+  padding: 5rem;
+}
+.campo {
+  display: flex;
+  margin-top: 2rem;
+  gap: 0.8rem;
+}
+.campo_label {
+  flex: 0 0 9rem;
+  text-align: right;
+}
+
+.campo_field {
+  flex: 1;
+  border: 1px solid var(--ColorSecundarioPetroleo);
+}
+
+.campo_field-textarea {
+  height: 15rem;
 }
